--- a/archives.html
+++ b/archives.html
@@ -48,7 +48,7 @@
   </header>
   <div>
     <dl>
-      <dt>周三 11 十一月 2015</dt>
+      <dt>周二 24 十一月 2015</dt>
       <dd><a href="http://lzl-team.tk/recent-matches.html">Recent Matches</a></dd>
     </dl>
   </div>
