--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 <td align="center">138060623</td>
-<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />三灶比目鱼</td>
+<td><img alt="" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/f2/f2c3bfb3389771fdc01af571c45289c816b44e4a.jpg" />0x5f3759df</td>
 <td align="center">三号位 辅助</td>
 </tr>
 <tr>
